welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: '=' expected but ';' found.
var nbPas;
         ^Variables:3: error: ';' expected but integer literal found.
int x==1;
       ^